# aoba

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml  docker.yml
src/: main.rs
src/aoba/: __init__.py
