[project]
name = "aoba"
version = "2.0.0"
description = "Add your description here"
authors = [
    { name = "Hamuko", email = "hamuko@burakku.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
]

[project.scripts]
aoba = "aoba:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = [
    "FAST",
    "I",
]
